修改部署文件

--- a/config/samples/v1beta1_deploymentscale.yaml
+++ b/config/samples/v1beta1_deploymentscale.yaml
@@ -15,4 +15,4 @@ spec:
     - name: test-deploy-1
       namespace: default
     - name: test-deploy-2
-      namesapce: test
+      namespace: test
